--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,12 @@
-<h1>Welcome <strong>{{ this.firestoreService.userData.displayName }}</strong></h1>
-
-<button mat-raised-button color="primary" (click)="this.afAuth.signOut();">Log out</button>
+<main>
+    <div *ngIf="authService.userData as user">
+        <img class="user-profile-picture" src="{{(user.photoURL) ? user.photoURL : './../../../assets/img/blank_user.svg'}}" alt="{{user.displayName}}">
+        <div>
+            <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
+            <p>User ID: <strong>{{user.uid}}</strong></p>
+            <p>Email: <strong>{{user.email}}</strong></p>
+            <p>Email Verified: <strong>{{user.emailVerified}}</strong></p>
+        </div>
+    </div>
+    <button mat-raised-button color="primary" (click)="authService.SignOut()">Log out</button>
+</main>
