--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,18 +1,12 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-        <div class="authBlock">
-            <h3>Reset Password</h3>
-            <p class="text-center">Please enter your email address to request a password reset.</p>
-            <div class="formGroup">
-                <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
-            </div>
-            <!-- Calling ForgotPassword from AuthService Api -->
-            <div class="formGroup">
-                <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
-            </div>
-        </div>
-        <div class="redirectToLogin">
-            <span>Go back to ? <span class="redirect" routerLink="/login">Log In</span></span>
-        </div>
-    </div>
-</div>
+<h2>Reset Password</h2>
+<p class="text-center">Please enter your email address to request a password reset.</p>
+
+<form action="" onsubmit="return false;">
+
+    <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput #passwordResetEmail required>
+    </mat-form-field><br>
+    <button (click)="this.authService.ForgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button color="primary">Reset Password</button><br>
+    <a routerLink="/login"> Go back to login</a>
+</form>
