--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,39 @@
-<router-outlet>
-</router-outlet>
+<mat-drawer-container class="mat-drawer-container" autosize>
+    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+        <div class="logo-container">
+            LOGO
+        </div>
+
+        <!-- *ngIf="(afAuth.user | async)"  -->
+
+        <ul class="menu-items">
+            <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
+                # welcome</li>
+            <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
+                # news-chat</li>
+            <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
+                <mat-icon>add</mat-icon>Create New-Chat</li>
+            <li *ngIf="(afAuth.user | async)" (click)="logout(); drawer.toggle()">
+                <mat-icon>logout</mat-icon>Logout</li>
+        </ul>
+
+    </mat-drawer>
+
+    <div class="example-sidenav-content">
+        <mat-toolbar class="header">
+            <mat-toolbar-row>
+                <div class="header-left">
+                    <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                    <span class="headline">Slack Clone</span>
+                    <input class="search_field hide_mobile" type="text" placeholder="search">
+                </div>
+                <img src="assets/img/male.png" class="profile">
+            </mat-toolbar-row>
+        </mat-toolbar>
+
+        <div class="router-container">
+            <router-outlet></router-outlet>
+        </div>
+
+    </div>
+</mat-drawer-container>
