cleanup and basic styling part 4

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -8,5 +8,5 @@
             <p>Email Verified: <strong>{{user.emailVerified}}</strong></p>
         </div>
     </div>
-    <button mat-raised-button color="primary" (click)="authService.SignOut()">Log out</button>
+    <button mat-raised-button color="primary" (click)="authService.logOut()">Log out</button>
 </main>
