--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -7,6 +7,6 @@
         <mat-label>Email</mat-label>
         <input type="email" matInput #passwordResetEmail required>
     </mat-form-field><br>
-    <button (click)="this.authService.ForgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button color="primary">Reset Password</button><br>
+    <button (click)="this.authService.forgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button color="primary">Reset Password</button><br>
     <a routerLink="/login"> Go back to login</a>
 </form>
