--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,30 +1,17 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-        <div class="authBlock">
-            <h3>Sign Up</h3>
-            <div class="formGroup">
-                <input type="email" class="formControl" placeholder="Email Address" #userEmail required />
-            </div>
-            <div class="formGroup">
-                <input type="password" class="formControl" placeholder="Password" #userPwd required />
-            </div>
-            <div class="formGroup">
-                <input type="button" class="btn btnPrimary" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value)" />
-            </div>
-            <div class="formGroup">
-                <span class="or"><span class="orInner">Or</span></span>
-            </div>
-            <!-- Continue with Google -->
-            <div class="formGroup">
-                <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
-            <i class="fab fa-google-plus-g"></i>
-            Continue with Google
-            </button>
-            </div>
-        </div>
-        <div class="redirectToLogin">
-            <span>Already have an account?
-        <span class="redirect" routerLink="/login">Log In</span></span>
-        </div>
-    </div>
-</div>
+<h2>Sign Up</h2>
+
+<form>
+    <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput #userEmail required>
+    </mat-form-field>
+    <br>
+    <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput #userPwd required>
+    </mat-form-field>
+    <br>
+    <button mat-raised-button color="primary" (click)="authService.signUp(userEmail.value, userPwd.value)">Sign Up</button>
+    <button mat-raised-button color="secondary" (click)="authService.googleAuth()">Continue with Google</button><br>
+    <a routerLink="/login">Already have an account?</a><br>
+</form>
