--- a/src/app/verify-email/verify-email.component.html
+++ b/src/app/verify-email/verify-email.component.html
@@ -1,22 +1,8 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-        <div class="authBlock">
-            <h3>Thank You for Registering</h3>
-            <div class="formGroup" *ngIf="authService.userData as user">
-                <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
-                <p class="text-center">Please check your email and click on the link to verfiy your email address.</p>
-            </div>
-
-            <!-- Calling SendVerificationMail() method using authService Api -->
-            <div class="formGroup">
-                <button type="button" class="btn btnPrimary" (click)="authService.sendVerificationMail()">
-            <i class="fas fa-redo-alt"></i>
-            Resend Verification Email
-            </button>
-            </div>
-        </div>
-        <div class="redirectToLogin">
-            <span>Go back to?<span class="redirect" routerLink="/login"> Sign in</span></span>
-        </div>
-    </div>
+<h2>Thank You for Registering</h2>
+<div class="formGroup" *ngIf="this.authService.userData as user">
+    <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
+    <p class="text-center">Please check your email and click on the link to verify your email address.</p>
 </div>
+<button mat-raised-button color="primary" (click)="authService.sendVerificationMail()">Resend Verification Email</button><br>
+<br>
+<a routerLink="/login">Go back to Sign In</a>
