--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
     <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-        <div class="logo-container">
+        <div class="logo-container" (click)="drawer.toggle()">
             LOGO
         </div>
 
