--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,31 +1,17 @@
-<button mat-raised-button color="primary" routerLink="/get-started">
-    Get Started
-</button>
+<h2>Sign Up</h2>
 
-<mat-card>
-    <form [formGroup]="signupForm" (ngSubmit)="signup()">
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Full Name</mat-label>
-                <input autocomplete="off" formControlName="displayName" type="text" matInput placeholder="Display Name">
-            </mat-form-field>
-        </p>
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Email</mat-label>
-                <input formControlName="email" type="email" matInput placeholder="Email">
-            </mat-form-field>
-        </p>
-        <p>
-            <mat-form-field appearance="outline">
-                <mat-label>Password</mat-label>
-                <input autocomplete="off" formControlName="password" type="password" matInput placeholder="Password">
-            </mat-form-field>
-        </p>
-        <div *ngIf="firebaseErrorMessage != ''" class="error-style">
-            <span>{{ firebaseErrorMessage }}</span>
-        </div>
-
-        <button mat-raised-button color="primary">Signup</button>
-    </form>
-</mat-card>
+<form>
+    <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput #userEmail required>
+    </mat-form-field>
+    <br>
+    <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput #userPwd required>
+    </mat-form-field>
+    <br>
+    <button mat-raised-button color="primary" (click)="authService.signUp(userEmail.value, userPwd.value)">Sign Up</button>
+    <button mat-raised-button color="secondary" (click)="authService.googleAuth()">Continue with Google</button><br>
+    <a routerLink="/login">Already have an account?</a><br>
+</form>
