--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -20,20 +20,28 @@
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
     padding-left: 12px;
     padding-right: 16px;
-    min-height: 56px;
+    min-height: 35px;
     display: flex;
     align-items: center;
+    background-color: rgb(64, 18, 64);
     img {
-        height: 48px;
+        height: 30px;
     }
 }
 
 mat-toolbar,
 mat-toolbar-row {
-    min-height: 56px;
-    height: 56px;
-    background-color: rgb(84, 21, 84);
+    min-height: 36px;
+    height: 36px;
+    background-color: rgb(64, 18, 64);
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .header-left {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .menu-items {
@@ -43,7 +51,7 @@ mat-toolbar-row {
     li {
         padding-left: 16px;
         padding-right: 16px;
-        height: 48px;
+        height: 30px;
         display: flex;
         align-items: center;
         cursor: pointer;
@@ -65,9 +73,53 @@ mat-toolbar-row {
     padding-right: 56px;
 }
 
-@media(max-width: 600px) {
+.search_field {
+    height: 18px;
+    width: 300px;
+    background-color: rgba(235, 235, 235, 0.35);
+    border: 0px;
+    border-radius: 7px;
+    padding: 5px;
+    margin-left: 150px;
+    &:focus {
+        outline: none;
+        background-color: rgb(248, 247, 247);
+    }
+    &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+    }
+}
+
+.profile {
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+    }
+}
+
+@media(max-width: 1000px) {
     .router-container {
         padding-left: 8px;
         padding-right: 8px;
+    }
+    .search_field {
+        margin-left: 20px;
+        max-width: 40%;
+    }
+    .headline {
+        display: none;
+    }
+    .menu-icon {
+        margin-right: 0;
+    }
+    .profile {
+        margin-left: -120px;
+    }
+    .mat-drawer-container {
+        overflow-x: hidden;
     }
 }
