add account component and routing

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -25,7 +25,7 @@
                     <span class="headline">Slack Clone</span>
                     <input class="search_field hide_mobile" type="text" placeholder="search">
                 </div>
-                <img src="assets/img/male.png" class="profile">
+                <img [routerLink]="['/chat/account']" routerLinkActive="router-link-active" src="assets/img/male.png" class="profile">
             </mat-toolbar-row>
         </mat-toolbar>
 
