--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,7 +9,7 @@
         <ul class="menu-items">
             <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active">
                 # welcome</li>
-            <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
+            <li [routerLink]="['/chat/chatroom']" routerLinkActive="router-link-active">
                 # news-chat</li>
             <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
                 <mat-icon>add</mat-icon>Create New-Chat</li>
