fix login after sign-up and improve forwarding

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -13,5 +13,5 @@
     <br>
     <button mat-raised-button color="primary" (click)="authService.signUp(userEmail.value, userPwd.value)">Sign Up</button>
     <button mat-raised-button color="secondary" (click)="authService.googleAuth()">Continue with Google</button><br>
-    <a routerLink="/login">Already have an account?</a><br>
+    <a (click)="this.utils.redirectToLogin()">Already have an account?</a><br>
 </form>
