--- a/src/app/verify-email/verify-email.component.html
+++ b/src/app/verify-email/verify-email.component.html
@@ -5,4 +5,4 @@
 </div>
 <button mat-raised-button color="primary" (click)="authService.sendVerificationMail()">Resend Verification Email</button><br>
 <br>
-<a routerLink="/login">Go back to Sign In</a>
+<a (click)="this.utils.redirectToLogin()">Go back to Login</a>
