--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="component-wrapper">
     <div class="to-sign-up">
-        <p>Neu bei Slack-Clone?</p>
-        <a href="">Account erstellen</a>
+        <p>New to Slack-Clone?</p>
+        <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign up</a>
     </div>
 
     <div class="sign-in-container">
@@ -12,7 +12,7 @@
         class="google-icon"
         src="assets/images/googleicon.png"
         alt=""
-      />Anmelden mit Google
+      />Login with google account
     </button>
         <p>or</p>
 
