updated login template

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="sign-in-container">
-    <h1>First of all, enter your email address</h1>
+    <h1>Sign in to Slack</h1>
     <span> We suggest using the email address that you use at work. </span>
     <button
       (click)="this.authService.googleAuth()"
