--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -13,6 +13,7 @@ h1 {
 a {
     text-decoration: none;
     color: #1264a3;
+    cursor: pointer;
 }
 
 .to-sign-up {
@@ -45,6 +46,7 @@ a {
     background-color: #fff;
     border: 2px solid #4285f4;
     color: #4285f4;
+
     &:active {
         color: #4285f4;
     }
@@ -53,6 +55,7 @@ a {
 .mat-loginbutton {
     background-color: #4a154b;
     color: white;
+
     &:hover {
         background-color: #611f69e6;
     }
