--- a/src/app/dialog-add-channel/dialog-add-channel.component.html
+++ b/src/app/dialog-add-channel/dialog-add-channel.component.html
@@ -1,6 +1,5 @@
 <mat-form-field appearance="fill">
   <mat-label>Create a name for the channel</mat-label>
-  <input matInput />
+  <input matInput [(ngModel)]="channel.channelName" />
 </mat-form-field>
-
-<button mat-raised-button (click)="createChannel($event)">Create</button>
+<button mat-raised-button (click)="createChannel()">Create</button>
