--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -9,4 +9,5 @@
         </div>
     </div>
     <button mat-raised-button color="primary" (click)="this.authService.logOut()">Log out</button>
+    <button mat-raised-button color="warn" (click)="this.openDeleteUserDialog()">Delete User</button>
 </main>
