delete user from firestore and more improvements

--- a/src/app/dialog-auth-errors/dialog-auth-errors.component.html
+++ b/src/app/dialog-auth-errors/dialog-auth-errors.component.html
@@ -1,5 +1,5 @@
 <div class="mat-dialog-header">
-    <i class="material-icons">{{ this.authService.authErrorIcon }}</i>
+    <i style="color: var(--error-col)" class="material-icons">{{ this.authService.authErrorIcon }}</i>
     <h1 mat-dialog-title>{{ this.authService.authErrorHeadline }}</h1>
 </div>
 
