implement changeDisplayName method and edit user dialog

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -10,4 +10,5 @@
     </div>
     <button mat-raised-button color="primary" (click)="this.authService.logOut()">Log out</button>
     <button mat-raised-button color="warn" (click)="this.openDeleteUserDialog()">Delete User</button>
+    <button mat-raised-button color="basic" (click)="this.openEditUserDialog()">Edit user</button>
 </main>
