--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,8 +1,10 @@
 <div class="chatroom">
-    <h2>... Chat</h2>
+    <h2> {{ channel.channelName }} </h2>
 
     <mat-card class="">
-        <div class="post-headline"><img class="profile" src="assets\img\male.png"> user.name </div>
+        <div class="post-headline">
+            <!-- <img class="profile" src="assets\img\male.png"> -->
+            user.name </div>
         <div>
             First post!
         </div>
