style edit user dialog

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -9,6 +9,5 @@
         </div>
     </div>
     <button mat-raised-button color="primary" (click)="this.authService.logOut()">Log out</button>
-    <button mat-raised-button color="warn" (click)="this.openDeleteUserDialog()">Delete User</button>
-    <button mat-raised-button color="basic" (click)="this.openEditUserDialog()">Edit user</button>
+    <button mat-raised-button color="basic" (click)="this.openEditUserDialog()">Account Settings</button>
 </main>
