--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,1 +1,16 @@
-<p>dialog-edit-user works!</p>
+<h1 mat-dialog-title>Account Settings</h1>
+<div mat-dialog-content *ngIf="authService.userData as user">
+    <div class="profile-picture-wrapper">
+        <img class="profile-picture" src="{{ user.photoURL? user.photoURL : './../../../assets/img/blank_user.svg' }}" alt="{{ user.displayName }}" />
+        <i class="material-icons">edit</i>
+    </div>
+    <mat-form-field appearance="outline">
+        <mat-label>New Display Name</mat-label>
+        <input matInput>
+    </mat-form-field>
+</div>
+<div mat-dialog-actions>
+    <button mat-button>Cancel</button>
+    <button (click)="this.openDeleteUserDialog()" mat-button color="warn">Delete User</button>
+    <button color="primary" mat-button cdkFocusInitial>Save Changes</button>
+</div>
