implement changeProfilePicture method

--- a/src/app/dialog-edit-user/dialog-edit-user.component.scss
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.scss
@@ -22,7 +22,7 @@
     }
     img {
         width: 96px;
-        object-fit: contain;
+        height: 96px;
         border-radius: 50%;
     }
     i {
