--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,6 +1,6 @@
 <main>
     <div *ngIf="authService.userData as user">
-        <img class="user-profile-picture" src="{{(user.photoURL) ? user.photoURL : './../../../assets/img/blank_user.svg'}}" alt="{{user.displayName}}">
+        <img class="profile-picture" src="{{(user.photoURL) ? user.photoURL : './../../../assets/img/blank_user.svg'}}" alt="{{user.displayName}}">
         <div>
             <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
             <p>User ID: <strong>{{user.uid}}</strong></p>
