--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -1,3 +1,11 @@
+.mat-card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    margin: 0 0;
+}
+
 .profile-picture {
     width: 96px;
     height: 96px;
