--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,11 +1,11 @@
-<h1 mat-dialog-title>Account Settings</h1>
+<h1 mat-dialog-title>Edit User Profile</h1>
 <div mat-dialog-content *ngIf="authService.userData as user">
     <div (click)="fileUpload.click()" class="profile-picture-wrapper">
         <img class="profile-picture" src="{{ user.photoURL? user.photoURL : './../../../assets/img/blank_user.svg' }}" alt="{{ user.displayName }}" />
         <i class="material-icons">edit</i>
     </div>
     <mat-form-field appearance="outline">
-        <mat-label>New Display Name</mat-label>
+        <mat-label>Change Display Name</mat-label>
         <input [(ngModel)]="this.authService.newDisplayName" matInput>
     </mat-form-field>
     <input (change)="this.firestorage.uploadImage($event)" #fileUpload type="file" accept=".jpg,.png" hidden>
