--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -11,7 +11,7 @@
         <p><strong>Email Verified: </strong>{{user.emailVerified}}</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="this.authService.logOut()">Log out</button>
-        <button mat-raised-button color="basic" (click)="this.openEditUserDialog()">Edit User Profile</button>
+        <button mat-stroked-button color="primary" (click)="this.authService.logOut()">Log out</button>
+        <button mat-stroked-button color="basic" (click)="this.openEditUserDialog()">Edit Profile</button>
     </mat-card-actions>
 </mat-card>
