--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,61 +1,48 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-    <div class="logo-container" (click)="drawer.toggle()">LOGO</div>
+    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+        <div class="logo-container" (click)="drawer.toggle()">LOGO</div>
 
-    <ul class="menu-items">
-      <li
-        [routerLink]="['/chat/welcome']"
-        routerLinkActive="router-link-active"
-      >
-        # welcome
-      </li>
-      <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
-        # news-chat
-      </li>
-      <li *ngFor="let channel of this.firestoreService.allChannels">
-        #{{ channel.channelName }}
-      </li>
-      <li (click)="openDialog()"><mat-icon>add</mat-icon>Create New-Chat</li>
-      <li (click)="this.authService.logOut()">
-        <mat-icon>logout</mat-icon>Logout
-      </li>
-    </ul>
-  </mat-drawer>
+        <ul class="menu-items">
+            <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active">
+                # welcome
+            </li>
+            <li [routerLink]="['/welcome']" routerLinkActive="router-link-active">
+                # news-chat
+            </li>
+            <li *ngFor="let channel of this.firestoreService.allChannels">
+                #{{ channel.channelName }}
+            </li>
+            <li (click)="openDialog()">
+                <mat-icon>add</mat-icon>Create New-Chat</li>
+            <li (click)="this.authService.logOut()">
+                <mat-icon>logout</mat-icon>Log Out
+            </li>
+        </ul>
+    </mat-drawer>
 
-  <div class="example-sidenav-content">
-    <mat-toolbar class="header">
-      <mat-toolbar-row>
-        <div class="header-left">
-          <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-          <span class="headline">Slack Clone</span>
-          <input
-            class="search_field hide_mobile"
-            type="text"
-            placeholder="search"
-          />
-        </div>
-        <div *ngIf="authService.userData as user" class="user-container">
-          <span>{{ user.displayName }}</span>
-          <a
-            [routerLink]="['/chat/account']"
-            routerLinkActive="router-link-active"
-          >
-            <img
-              class="profile-picture"
-              src="{{
+    <div class="example-sidenav-content">
+        <mat-toolbar class="header">
+            <mat-toolbar-row>
+                <div class="header-left">
+                    <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                    <span class="headline">Slack Clone</span>
+                    <input class="search_field hide_mobile" type="text" placeholder="search" />
+                </div>
+                <div *ngIf="authService.userData as user" class="user-container">
+                    <span>{{ user.displayName }}</span>
+                    <a [routerLink]="['/chat/account']" routerLinkActive="router-link-active">
+                        <img class="profile-picture" src="{{
                 user.photoURL
                   ? user.photoURL
                   : './../../../assets/img/blank_user.svg'
-              }}"
-              alt="{{ user.displayName }}"
-            />
-          </a>
-        </div>
-      </mat-toolbar-row>
-    </mat-toolbar>
+              }}" alt="{{ user.displayName }}" />
+                    </a>
+                </div>
+            </mat-toolbar-row>
+        </mat-toolbar>
 
-    <div class="router-container">
-      <router-outlet></router-outlet>
+        <div class="router-container">
+            <router-outlet></router-outlet>
+        </div>
     </div>
-  </div>
 </mat-drawer-container>
