implement guestLogin method and adapt isLoggedIn

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,7 @@
 <div class="component-wrapper">
-  <div class="to-sign-up">
-    <p>New to Slack-Clone?</p>
-    <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active"
-      >Sign up</a
+    <div class="to-sign-up">
+        <p>New to Slack-Clone?</p>
+        <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign up</a
     >
   </div>
 
@@ -59,7 +58,8 @@
       </button>
       <p>
         <a (click)="openDialog()">Forgot Password?</a>
-      </p>
-    </form>
-  </div>
+        </p>
+        </form>
+        <button mat-raised-button (click)="this.authService.guestLogin()">Login as guest</button>
+    </div>
 </div>
