--- a/src/app/dialog-guest-user/dialog-guest-user.component.html
+++ b/src/app/dialog-guest-user/dialog-guest-user.component.html
@@ -1,7 +1,7 @@
 <h2>Login as guest</h2>
 <p>Please enter a display name as for your guest account.</p>
 
-<form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit()" ngNativeValidate>
   <mat-form-field appearance="outline">
     <mat-label>Display Name</mat-label>
     <input
