feat post message to firestore and save it to the array 'messages'

--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -4,7 +4,7 @@
     <mat-card class="">
         <div class="post-headline">
             <!-- <img class="profile" src="assets\img\male.png"> -->
-            user.name </div>
+        </div>
         <div>
             First post!
         </div>
